--- a/myfirstproject/src/App.css
+++ b/myfirstproject/src/App.css
@@ -1,24 +1,48 @@
 /*============================ Header Component======================*/
 
+.Logo {
+  margin-top: 5px;
+  text-align: center;
+}
+
 .Logo img {
   height: 80px;
-  width: 100px;
+  width: 150px;
 }
 
 .Header {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   margin-right: 10%;
   margin-left: 10%;
 }
 
+.account {
+  margin-top: 40px;
+  text-align: right;
+}
+
+.account ul li {
+  display: inline;
+}
+.contactus {
+  margin-top: 40px;
+}
 /*=============================Footer Component=============================*/
 
 .Footer {
-  margin-top: 50px;
-  border-top: solid 1px lightgray;
-  padding-right: 10%;
+  border-top: 1px solid black;
+  bottom: 0%;
   padding-left: 10%;
-  display: flex;
-  flex-wrap: wrap;
+  padding-right: 10%;
+  padding-bottom: 5%;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin-top: 50px;
+  border-bottom: solid 1px lightgray;
+  margin-bottom: 50px;
 }
 
 .Footer h1 {
@@ -26,14 +50,23 @@
   font-weight: bold;
 }
 
-.Footer ul {
+.Footer div {
+  margin-top: 10px;
   padding-top: 5%;
-  border-bottom: solid 1px;
+}
+.Footer li {
+  list-style: none;
+}
+
+.footer-child li {
+  font-size: 12px;
 }
 
 /*=============================Top Menu Component=============================*/
 
 .TopMenu {
+  border-top: black solid 1px;
+  border-bottom: gray solid 1px;
   display: flex;
   padding-right: 10%;
   padding-left: 10%;
@@ -42,17 +75,37 @@
   top: 0;
   background-color: white;
 }
-.TopMenu ul {
-  text-align: center;
-}
+
 .TopMenu ul li {
-  font-size: 20px;
+  font-size: 15px;
   padding-left: 30px;
   display: inline;
 }
 
-.Cart {
-  float: right;
+.menuitems {
+  margin-top: 10px;
+  flex-wrap: wrap;
+
+  text-align: center;
+  flex: 4;
+}
+
+.cart {
+  margin-top: 10px;
+  flex: 1;
+  text-align: right;
+}
+
+.menuchild {
+  text-align: right;
+}
+
+.cartnumber span {
+  color: white;
+  position: absolute;
+  top: 5px;
+  background: crimson;
+  border-radius: 50%;
 }
 
 /*===========================Main Page=========================================*/
@@ -64,18 +117,174 @@
 .newcollection img {
   width: 100%;
 }
-.featured img {
-  padding-left: 20px;
-  padding-right: 20px;
 
-  width: 500px;
-  height: 500px;
-}
 .featured {
   display: flex;
-  flex-wrap: wrap;
 }
 
-.featured > div {
-  flex: 1 1 150px;
+.featured div {
+  padding: 10px;
+}
+
+.featured img {
+  height: 70%;
+  width: 100%;
+}
+
+.featured-child1 {
+  flex: 1;
+}
+
+.featured-child2 {
+  flex: 1;
+}
+
+.featured-child3 {
+  flex: 1;
+}
+.video div {
+  text-align: center;
+}
+
+.video iframe {
+  margin-bottom: 30px;
+}
+
+.video a:visited,
+.video a:link {
+  background-color: white;
+  color: black;
+  border: 2px solid green;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.video a:hover,
+.video a:active {
+  background-color: green;
+  color: white;
+}
+
+.video button {
+  border: none;
+  text-align: center;
+  margin-bottom: 50px;
+  font-weight: bold;
+  font-size: 20px;
+  position: relative;
+}
+
+/*==============================================About us=============================*/
+.about-us,
+.contact-us,
+.privacy-policy {
+  text-align: center;
+  margin-bottom: 20%;
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+/*==========================================Single Product ===============================/*/
+.SingleProduct {
+  width: 400px;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  margin-bottom: 10%;
+  margin-top: 10%;
+}
+
+.SingleProduct img {
+  width: 400px;
+  height: 500px;
+}
+.SingleProduct h4,
+p {
+  text-align: center;
+}
+.SingleProduct h4 {
+  color: brown;
+  background-color: white;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: "Times New Roman", Times, serif;
+}
+.btn_AddToCart {
+  text-align: center;
+}
+
+.SingleProduct p {
+  color: red;
+}
+
+.SingleProduct button {
+  background-color: unset;
+  width: 100%;
+  color: white;
+  background-color: gray;
+}
+/*==========================================NewIn ===============================/*/
+
+.NewIn {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+.NewIn h1 {
+  text-align: center;
+  background-color: black;
+  color: white;
+  text-decoration: solid;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 70px;
+}
+
+.NewIn-child {
+  display: grid;
+  grid-column-gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+/*==========================================UnStiched ===============================/*/
+/*==========================================Pret ===============================/*/
+/*==========================================LookBooks ===============================/*/
+/*==========================================Premium ===============================/*/
+/*==========================================Sale ===============================/*/
+
+/*===================================================MEDIA Querries==================================*/
+@media (max-width: 640px) {
+  .featured {
+    flex-direction: column;
+  }
+  .featured img {
+    height: auto;
+  }
+  .video iframe {
+    height: auto;
+  }
+
+  .video button {
+    font-size: 10px;
+  }
+
+  .Header {
+    padding: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+  }
+
+  .Logo {
+    text-align: left;
+  }
+  .contactus {
+    font-size: 8px;
+  }
+
+  .account {
+    text-align: left;
+  }
+
+  .account ul li {
+    display: list-item;
+    list-style: none;
+  }
 }
